# stable-diffusion-webui

./: pyproject.toml  webui-user.sh
docs/: TODO.md  diffusion.md  poetry.md  salary-email-template.html  stable-diffusion.md  ubuntu.md
docs/assets/: prompt.md
docs/scripts/: control-net.sh  sd-webui-animatediff.sh  ubuntu-ipv6.sh
