[tool.poetry]
name = "stable-diffusion-webui"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.13"


[[tool.poetry.source]]
name = "pytorch"
# https://download.pytorch.org/whl/cu121
url = "https://mirrors.aliyun.com/pytorch-wheels/cu121"
priority = "supplemental"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
